--- a/final/final_report.ipynb
+++ b/final/final_report.ipynb
@@ -49,11 +49,18 @@
    "source": [
     "### 2.1 Modeling [Blei et al. (2003)](http://www.jmlr.org/papers/volume3/blei03a/blei03a.pdf)\n",
     "LDA assumes the words in every documents are exchangeable, and each of which is a multinomial distribution over vocabularies of size $V$. The likelihood of a corpus $\\mathbf{D}$ contains $D$ documents is given as following:\n",
+    "\n",
     "\\begin{align*}\n",
-    "p(\\mathbf{D}; \\alpha, \\beta) =p(\\theta, \\beta, z, w) &=\\prod_{k=1}^{K} p(\\beta_{k};\\eta)\\prod_{d=1}^{D} p(\\theta_{d} ; \\alpha)(\\prod_{n=1}^{N}p(z_{dn} | \\theta_{d})p(w_{dn} |z_{dn},\\beta_{z_{dn}})$\\\\   \n",
-    "\t&= \\prod_{k=1}^{K} p(\\beta_{k};\\eta)\\prod_{d=1}^{D}p(\\theta_{d} ; \\alpha)(\\prod_{n=1}^{N}\\theta_{z_{dn}}f(w_{dn};\\beta_{z_{dn}}))\n",
+    "p(\\mathbf{D}; \\alpha, \\beta) =p(\\theta, \\beta, z, w) &=\\prod_{k=1}^{K} p(\\beta_{k};\\eta)\\prod_{d=1}^{D} p(\\theta_{d} ; \\alpha)(\\prod_{n=1}^{N}p(z_{dn} | \\theta_{d})p(w_{dn} |z_{dn},\\beta_{z_{dn}})\\\\\n",
+    "&= \\prod_{k=1}^{K} p(\\beta_{k};\\eta)\\prod_{d=1}^{D}p(\\theta_{d} ; \\alpha)(\\prod_{n=1}^{N}\\theta_{z_{dn}}f(w_{dn};\\beta_{z_{dn}})) \n",
     "\\end{align*}\n",
-    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Nodes/Parameter description:** \n",
     "* $\\alpha, \\eta$: dirichlet hyper parameter.  \n",
     "* $\\theta_{d}$: global latent variable, per-doc topic proportions; $\\theta_{d}$ $\\in$ $R^{k}$. $k$ dimensional Dir. random variable $\\theta$ can take values in (k-1)-simplex with $p.d.f$ $p(\\theta | \\alpha)=\\dfrac{\\Gamma(\\sum_{i=1}^{k}\\alpha_{i})}{\\prod_{i=1}^{k}\\Gamma(\\alpha_{i})}\\theta_{1}^{\\alpha_{1}-1} \\cdots \\theta_{k}^{\\alpha_{k}-1} $.\n",
@@ -86,11 +93,11 @@
     "We planned to implement the **Black Box variational inference** method (klqp method) in Edward at the very beginning, however if we include all parameters $\\theta$, $z$, and $\\beta$ for the posterior inference, the result cannot converge. Because klqp in Edward has poor performance at approximating the Dirichlet distribution, especially if we have full-rank covariances for the mixture components. This problem is partially due to the high variance in stochastic optimization if only implementing the vanilla version of BBVI.  \n",
     "In addition, because of the slow convergence of **Gibbs Sampling** inference of LDA, we implemented the **Collapsed Gibbs Sampling** Inference instead [Griffiths et al. (2004).](http://www.pnas.org/content/pnas/101/suppl_1/5228.full.pdf). Since we are only interested in the posterior distribution over the assignment of words in $k$ topics respectively, $p(\\mathbf{z}|\\mathbf{w})$, we can have inexplicit expression of the posterior estimation of $\\theta$ and $\\beta$.   \n",
     "In Monte Carlo Markov Chain, we construct a Markov chain on latent variables which converges to a stationary distribution. This would be used for the estimation of the posterior distribution. In order to draw sample at the time t, we need to construct the complete conditional distribution of latent variables, $p(z_{d,i}|\\mathbf{z}_{d,-i}, \\mathbf{w})$ in this algorithm. Taking the advantage of the conjugate conditional family, the probability distribution can be expressed as: \n",
-    "$$\n",
+    "\n",
     "\\begin{align*}\n",
     " \tp(z_{d,i}=j|\\mathbf{z}_{d,-i}, \\mathbf{w}) & \\propto \\frac{n_{-i,j}^{(w_{d,i}) }+ \\eta}{n_{-i,j}^{(.)} + V\\eta} \\frac{n_{-i,j}^{(d)}+\\alpha}{n_{-i,.}^{(d)}+k\\alpha}\n",
     "\\end{align*}\n",
-    "$$\n",
+    "\n",
     "The first fraction express the probability of $w_{d,i}$ under topic $j$, and the second term expresses the probability of topic $j$ document $d_{i}$. The notations are defined as follows:\n",
     "* $n_{-i,j}^{(w_{d,i})}$ is the number of times this $i^{th}$ observed word in document $d$ is assigned to topic $j$ while not including the current assignment $z_{d,i}$.  \n",
     "* $n_{-i,j}^{(.)}$ is the number of times any word is assigned to topic $j$ while not including the current assignment $z_{d,i}$.  \n",
@@ -99,12 +106,11 @@
     "* $V$ is the vocabulary size, and $k$ is the number of topics defined at the very beginning.  \n",
     "\n",
     "With the set of samples drawn after burn-in period, we can evaluate $\\theta$ and $\\beta$ by integrating across the full set of samples as follows:\n",
-    "$$\n",
-    " \\begin{align*}\n",
+    "\n",
+    "\\begin{align*}\n",
     " \t\\hat{\\beta_{j}^{(w)}} &= \\frac{n_{j}^{(w)} + \\eta}{n_{j}^{(.)}+V\\eta}\\\\\n",
     " \t\\hat{\\theta_{j}^{(d)}} &= \\frac{\\theta_{j}^{(d)} + \\alpha}{n_{.}^{(d)}+k\\alpha}\n",
-    " \\end{align*}\n",
-    "$$"
+    "\\end{align*}\n"
    ]
   },
   {
@@ -200,11 +206,11 @@
    "source": [
     "**PMI Evaluation for Top Words**  [Bouma (2009)](https://svn.spraakdata.gu.se/repos/gerlof/pub/www/Docs/npmi-pfd.pdf)  \n",
     "Point-wise mutual information (PMI) is a measure of how much the actual probability of a particular co-occurrence of events $p(x, y)$ differs from what we would expect it to be on the basis of the probabilities of the individual events $p(x)$ and $p(y)$. Also, the calculation based on the independent assumption of $x$ and $y$ is given as:\n",
-    "$$\n",
+    "\n",
     "\\begin{align*}\n",
     " \tpmi (x, y) = \\ln \\frac{p(x,y)}{p(x)p(y)}\n",
     "\\end{align*} \n",
-    "$$\n",
+    "\n",
     "The joint probability is estimated by the time we see both words in a 20-length sliding window over the entire corpus. The results are shown here,"
    ]
   },
@@ -889,11 +895,10 @@
     "### 3.1 Modeling  [Das et al. (2015)](http://www.aclweb.org/anthology/P15-1077) \n",
     "Instead of generating words from categorical distribution, Gaussian LDA integrates the word embedding that aims at capturing more semantic regularities in language and generates words from multivariate Gaussian distributions. The observed words input are pre-trained word2vec embedding vectors with fixed dimensions [gensim](https://radimrehurek.com/gensim/models/word2vec.html). Our model used 25 dimensional word embeddings instead of the pre-defined 100 dimension due to the feasibility and running time while implementing on Edward.  \n",
     "The likelihood of a corpus $\\mathbf{D}$ contains $D$ documents is given as following:\n",
-    "$$\n",
+    "\n",
     "\\begin{align*}\n",
     "p(\\mathbf{D}; \\alpha, \\beta)=\\prod_{k=1}^{K} p(\\Sigma_{k}|\\Psi, v)p(\\mu_{k}|\\mu_{0}, \\Sigma_{k})\\prod_{d=1}^{D} p(\\theta_{d} | \\alpha)(\\prod_{n=1}^{N}p(z_{dn} | \\theta_{d})p(w_{dn} |z_{dn},\\Sigma_{z_{dn}},\\mu_{z_{dn}}))\n",
-    "\\end{align*}\n",
-    "$$"
+    "\\end{align*}\n"
    ]
   },
   {
