--- a/final/final_report.ipynb
+++ b/final/final_report.ipynb
@@ -98,11 +98,11 @@
     " \tp(z_{d,i}=j|\\mathbf{z}_{d,-i}, \\mathbf{w}) & \\propto \\frac{n_{-i,j}^{(w_{d,i}) }+ \\eta}{n_{-i,j}^{(.)} + V\\eta} \\frac{n_{-i,j}^{(d)}+\\alpha}{n_{-i,.}^{(d)}+k\\alpha}\n",
     "\\end{align*}\n",
     "\n",
-    "The first fraction express the probability of $w_{d,i}$ under topic $j$, and the second term expresses the probability of topic $j$ document $d_{i}$. The notations are defined as follows:\n",
+    "The first fraction express the probability of observing $w_{d,i}$ under topic $j$, and the second term expresses the probability of observing words in topic $j$ of document $d$. The notations are defined as follows:\n",
     "* $n_{-i,j}^{(w_{d,i})}$ is the number of times this $i^{th}$ observed word in document $d$ is assigned to topic $j$ while not including the current assignment $z_{d,i}$.  \n",
     "* $n_{-i,j}^{(.)}$ is the number of times any word is assigned to topic $j$ while not including the current assignment $z_{d,i}$.  \n",
     "* $n_{-i,j}^{(d)}$ is the number of times a word from document $d$ is assigned to topic $j$ while not including the current assignment $z_{d, i}$.\n",
-    "* $n_{-i,.}^{(d)}$ is the number words in document $d$ while not including the current assignment $z_{d, i}$.\n",
+    "* $n_{-i,.}^{(d)}$ is the number of times a word in document $d$ is assigned to any topic while not including the current assignment $z_{d, i}$.\n",
     "* $V$ is the vocabulary size, and $k$ is the number of topics defined at the very beginning.  \n",
     "\n",
     "With the set of samples drawn after burn-in period, we can evaluate $\\theta$ and $\\beta$ by integrating across the full set of samples as follows:\n",
